--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/lodash": "^4.14.37",
     "core-js": "^2.4.1",
     "flag-icon-css": "^2.4.0",
+    "ng2-bootstrap": "^1.1.14",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
