--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-countries",
-  "version": "0.0.7",
+  "version": "1.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -26,15 +26,17 @@
     "@angular/router": "3.0.0",
     "@types/lodash": "^4.14.37",
     "core-js": "^2.4.1",
+    "countries-data": "0.0.1",
     "flag-icon-css": "^2.4.0",
     "ng2-bootstrap": "^1.1.14",
+    "ng2-pipe": "1.0.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
-    "angular-cli": "1.0.0-beta.16",
+    "angular-cli": "1.0.0-beta.18",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
