update package json
bump
minor fix

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-countries",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -30,7 +30,7 @@
     "countries-data": "0.0.1",
     "flag-icon-css": "^2.4.0",
     "ng2-bootstrap": "^1.1.14",
-    "ng2-pipe": "1.0.1",
+    "ng2-pipe": "^1.0.8",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
